# src/main/java/com/daniil1380/coursedatabase/api/ClientApiImpl.java
@@ -1,12 +1,18 @@
 package com.daniil1380.coursedatabase.api;
 
+import com.daniil1380.coursedatabase.entity.AccountWithBrokerIdEntity;
 import com.daniil1380.coursedatabase.entity.ClientEntity;
 import com.daniil1380.coursedatabase.service.ClientService;
+import io.swagger.client.ApiException;
 import io.swagger.client.api.UserApi;
+import io.swagger.client.model.AccountWithBrokerId;
 import io.swagger.client.model.User;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.server.ResponseStatusException;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -35,5 +41,21 @@ public class ClientApiImpl extends UserApi {
     public User postUser(@RequestBody User body){
         clientService.save(new ClientEntity(body));
         return body;
+    }
+
+    @RequestMapping(value = "/users/{userId}/accounts",
+            produces = { "application/json" },
+            method = RequestMethod.GET)
+    @Override
+    public List<AccountWithBrokerId> getUserAccounts(@PathVariable("userId") Long userId) throws ApiException {
+        if (clientService.get(userId.intValue()).isPresent()) {
+            return clientService.getAllAccountsByClient(userId.intValue()).stream()
+                    .map(AccountWithBrokerIdEntity::toAccountWithBrokerId).collect(Collectors.toList());
+
+        }
+        else {
+            throw new ResponseStatusException(
+                    HttpStatus.NOT_FOUND, "Not Found");
+        }
     }
 }
