# src/main/java/com/daniil1380/coursedatabase/api/ShareApiImpl.java
@@ -1,10 +1,12 @@
 package com.daniil1380.coursedatabase.api;
 
 import com.daniil1380.coursedatabase.entity.ShareEntity;
+import com.daniil1380.coursedatabase.entity.TopSharesEntity;
 import com.daniil1380.coursedatabase.service.ShareService;
 import io.swagger.client.ApiException;
 import io.swagger.client.api.ShareApi;
 import io.swagger.client.model.Share;
+import io.swagger.client.model.TopShare;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.*;
 
@@ -35,5 +37,14 @@ public class ShareApiImpl extends ShareApi {
     public Share postShare(@RequestBody Share body) {
         shareService.save(new ShareEntity(body));
         return body;
+    }
+
+    @RequestMapping(value = "/shares/topTen",
+            produces = { "application/json" },
+            method = RequestMethod.GET)
+    @Override
+    public List<TopShare> getTopShares() throws ApiException {
+        return shareService.getTopTenShares().stream().map(TopSharesEntity::toTopShare)
+                .collect(Collectors.toList());
     }
 }
